--- a/style.css
+++ b/style.css
@@ -29,7 +29,15 @@ body{
 	width: 40vw;
 	background-color: black;
 	color: white;
+	font-size: 40px;
+	justify-content: flex-end;
+	text-align: right;
+	align-items: flex-end;
 
+
+}
+.output{
+	margin-right: 10px
 }
 .clear{
 	background-color: grey;
@@ -47,6 +55,15 @@ body{
 	border:solid 1px black;
 	justify-content: center;
 	align-items: stretch;	
+	cursor: pointer;
+}
+.numpad:hover{
+	background-color: lightgrey;
+
+}
+.numpad:active{
+	background-color: darkgrey;
+
 }
 .operation{
 	width: 	10vw;
@@ -55,9 +72,19 @@ body{
 	border: solid 1px black;
 	justify-content: center;
 	align-items: center;	
+	cursor: pointer;
+}
+.operation:hover{
+	background-color: peru;
+
+}
+.operation:active{
+	background-color: brown;
+
 }
 .top-buttons{
 	display: flex;
+	cursor: pointer;
 }
 .middle-buttons{
 	display: flex;
@@ -78,5 +105,20 @@ body{
 	background-color: grey;
 	width: 	30vw;
 	border: solid 1px black;
+	cursor: pointer;
 	  
+}
+.zero:hover{
+	background-color: lightgrey;
+
+}
+.zero:active{
+	background-color: darkgrey;
+
+}
+.topbtn:hover{
+	background-color: lightgrey;
+}
+.topbtn:active{
+	background-color: darkgrey;
 }
